k3s/traefik/base/ingressclass.yaml
---
# Source: traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: release-name-default
    helm.sh/chart: traefik-20.8.0
    app.kubernetes.io/managed-by: Helm
  name: release-name-traefik
spec:
  controller: traefik.io/ingress-controller
